[metadata]
license_file = LICENSE.txt

[tool:pytest]
testpaths = tests

[coverage:run]
source = wheel
omit =
    .tox/*

[coverage:report]
show_missing = true

[coverage:html]
directory = docs/coverage_html_report

[radon]
cc_min = B

[flake8]
max-line-length = 88
ignore = E129,E203,E501,W503,S101
exclude =
    .tox
    .egg
    conf.py
    conftest.py
    app/templates
    app/static
    data

[pylint]
max-line-length = 88
