[metadata]
license_file = LICENSE.txt

[tool:pytest]
testpaths = tests
addopts = -v

[coverage:run]
source=fhe_collector

[coverage:report]
show_missing = true

[coverage:html]
directory = docs/coverage/html

[coverage:xml]
output = coverage.xml

[radon]
cc_min = B

[flake8]
max-line-length = 88
ignore = E129,E203,E501,W503,S101
exclude =
    app/templates
    app/static
    data
    conf.py
    conftest.py
    __pycache__
    .mypy_cache
    .tox
    .egg

[pylint]
max-line-length = 88

[mypy]
ignore_missing_imports = True
